# async_payments_service

./: .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  docker-compose.yml  env.example  pyproject.toml  pytest.ini
.deploy/: Dockerfile
migrations/: env.py
migrations/versions/: 5cc7046f3098_init.py
src/: config.py
src/domain/: models.py
src/entrypoints/consumer/: main.py  outbox_publisher.py  payment_consumer.py
src/entrypoints/dependencies/: auth.py  rabbit.py  uow.py
src/entrypoints/rest/: main.py  payments.py
src/repository/: base.py  outbox.py  payments.py
src/schemas/: payments.py
src/services/: payment_processing.py  payments.py  uow.py
tests/: conftest.py
tests/adapters/: fake_db.py  fake_models.py
tests/units/: test_payments.py  test_rabbit_mock.py
